# the_conspectus_pipeline

./: README.md  pyproject.toml
src/: __init__.py
src/config/: main.py
src/ingestion/: main.py
src/parsing/: __init__.py  main.py
